--- a/index.html
+++ b/index.html
@@ -136,18 +136,103 @@
             </div>
         </section>
         <section class="section-2">
-            <div class="container  relative">
-                <div class="col-1">
+            <div class="container flex  relative">
+                <div class="col-1 flex-40">
                     <img src="media/wetrusted.jpg" width="100%" height="500px;" alt="we trusted">
                 </div>
-                <div class="col-2">
+                <div class="col-2 flex-40">
                     <h3>We are more trusted than more than 5000 clients</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit facilis a enim doloremque dolores labore blanditiis expedita natus dignissimos, inventore voluptatem corrupti, quod amet doloribus porro aliquid modi accusamus voluptate.</p>
                     <a class="btn" href="#">Learn More</a>
                 </div>
             </div>
         </section>
-        <section class="section-3"></section>
+        <section class="section-3">
+            <div class="container">
+                <h3>Our Services</h3>
+                <div class="flex">
+                    <div class="flex-22 col">
+                        <img src="media/strategic-plan.png" alt="" width="30%">
+                        <h2>Strategic Planning</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                    <div class="flex-22 col">
+                        <img src="media/stock.png" alt="" width="30%">
+                        <h2>Trade & Stocks</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                    <div class="flex-22 col">
+                        <img src="media/assurance.png" alt="" width="30%">
+                        <h2>Audit & Assurance</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-btn">
+                    <a class="btn-s" href="#">More Services</a>
+                </div>
+            </div>
+        </section>
+        <section class="section-4">
+            <div class="container flex">
+                <div class="flex-50 col-1">
+                    <h3>Completed Cases</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas numquam provident, ducimus soluta incidunt accusamus. Non aspernatur molestiae id expedita! Quia illum.
+                    </p>
+                    <a class="btn-c" href="#">See More</a>
+                </div>
+                <div class=" col-img flex-50">
+                    <img src="media/completed_case_2.png" width="50%" alt="">
+                    <img src="media/completed_case_1.png" width="50%" alt="">
+                    <img src="media/completed_case_2.png" width="50%" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="section-5">
+            <div class="container homepage-testi flex">
+                <div>
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div class="">
+                    <img src="media/Homepage_testi.png" alt="">
+                    <h4>
+                        You can't succeed if you just do what othes do and 
+                        <br>
+                        follow the well-earn path . You need to create a new and
+                        <br>
+                        original path for yourself.
+                    </h4>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class=" qote">
+                        <h5>CLIFFORD FRAZIER-</h5>
+                        <p>Colorlib Themes</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </div>
+        </section>
+        <section class="section-6">
+            <div class="container">
+                <h3>Our Recenet News</h3>
+                <div>
+                    <div>
+                        <img src="media/rcent_1.png" alt="">
+                    </div>
+                    <p>Business planing</p>
+                    <h2>Amazing Places To Visit in Summer</h2>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
