Index.html COMPLETED

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-3
+        <section class="section-3">
             <div class="container">
                 <h3>Our Services</h3>
                 <div class="flex">
