about page completed

--- a/about.html
+++ b/about.html
@@ -82,5 +82,226 @@
                 </div>
             </div>
     </header>
+    <main>
+        <section class="about-hero">
+            <div class="container">
+              <h1>About</h1>
+            </div>
+        </section>
+        <section class="section-2">
+            <div class="container flex  relative">
+                <div class="col-1 flex-40">
+                    <img src="media/wetrusted.jpg" width="100%" height="500px;" alt="we trusted">
+                </div>
+                <div class="col-2 flex-40">
+                    <h3>We are more trusted than more than 5000 clients</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit facilis a enim doloremque dolores labore blanditiis expedita natus dignissimos, inventore voluptatem corrupti, quod amet doloribus porro aliquid modi accusamus voluptate.</p>
+                    <a class="btn" href="#">Learn More</a>
+                </div>
+            </div>
+        </section>
+        <section class="section-1">
+            <div class="container flex">
+                <div class="flex-25 col">
+                    <div>
+                        <img src="media/team_1.jpg" alt="" width="100%">
+                    </div>
+                    <div>
+                        <h2>Business Planning</h2>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus molestias eligendi nisi facere suscipit mollitia!
+                        </p>
+                    </div>
+                </div>
+                <div class="flex-25 col" >
+                    <div>
+                        <img src="media/team_2.jpg" alt="" width="100%">
+                    </div>
+                    <div>
+                        <h2>Financial Projections</h2>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus molestias eligendi nisi facere suscipit mollitia!
+                        </p>
+                    </div>
+                </div>
+                    <div  class="flex-25 col-3 col" >
+                        <h3>What we do for you</h3>
+                        <hr>
+                        <p>
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus molestias eligendi nisi facere suscipit mollitia!
+                        </p>
+                        <a href="#">View Profile</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-5">
+            <div class="container homepage-testi flex">
+                <div>
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div class="">
+                    <img src="media/Homepage_testi.png" alt="">
+                    <h4>
+                        You can't succeed if you just do what othes do and 
+                        <br>
+                        follow the well-earn path . You need to create a new and
+                        <br>
+                        original path for yourself.
+                    </h4>
+                    <div class="star">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class=" qote">
+                        <h5>CLIFFORD FRAZIER-</h5>
+                        <p>Colorlib Themes</p>
+                    </div>
+                </div>
+                <div>
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </div>
+        </section>
+        <section class="section-6">
+            <div class="container">
+                <h3>Our Recenet News</h3>
+                <div class="flex">
+                    <div class="flex-25">
+                        <div>
+                            <img src="media/rcent_1.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div  class="flex-25">
+                        <div >
+                            <img src="media/rcent_2.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-25">
+                        <div>
+                            <img src="media/rcent_3.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-7">
+            <div class="container flex">
+                <div class="flex-30">
+                    <h3>Request for call back</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. animi. ndsjrio riwji ewori ptyore weyru lorem kroerim kroeitk.</p>
+                </div>
+                <form action="" class="flex-60">
+                    <fieldset>
+                        <legend>
+                           <input type="text" name="username" placeholder="Name">
+                           <input type="phone" name="phone" placeholder="Mobile">
+                        </legend>
+                        <select name="serivces">
+                            <option value="services">Services</option>
+                            <option value="">Services-2</option>
+                            <option value="">Services-3</option>
+                           </select>
+                           <a href="#" class="btn">Send</a>
+                   </fieldset>
+                </form>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container flex">
+            <div class="flex-20">
+                <img src="media/logo2_footer.png" width="150" alt="logo">
+                <p>Lorem ipsum dolor sit amet conse, adipisicing elit. Id, ducimus.</p>
+                <nav>
+                    <ul class="ul">
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-pinterest"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class=" com-list flex-10">
+                <h5>Company</h5>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="cases.html">Cases</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Services</h5>
+                <ul>
+                    <li>Commercial Cleaning</li>
+                    <li>Office Cleaning</li>
+                    <li>FLoor Cleaning</li>
+                    <li>Building Cleaning</li>
+                    <li>Appartment Cleaning</li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Get iN Touch</h5>
+                <ul>
+                    <li>152-515-0565</li>
+                    <li>demonmail@gmail.com</li>
+                    <li>New Orleans, USA</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="container copy">
+            
+            <div>
+              <small>Copyright&copy;2020 All rights reserved | This tempelate is made with <i class="fa-regular fa-heart"></i> by <b>Colorib</b>  </small>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
