cases page completed

--- a/cases.html
+++ b/cases.html
@@ -82,5 +82,151 @@
                 </div>
             </div>
     </header>
+    <main>
+        <section class="cases-hero">
+            <div class="container">
+              <h1>Case Study</h1>
+            </div>
+        </section>
+        <section class="cases-section-2">
+            <div class="container flex">
+                <div class="case-img case-img-1 ">
+                    <div class="case-heading">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+                <div class="case-img case-img-2 ">
+                    <div class="case-heading">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+                <div class="case-img  case-img-3 ">
+                    <div class="case-heading ">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+                <div class="case-img  case-img-4 ">
+                    <div class="case-heading">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+                <div class="case-img  case-img-5 ">
+                    <div class="case-heading">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+                <div class="case-img  case-img-6 ">
+                    <div class="case-heading">
+                        <h2>Markrting Strategy</h2>
+                        <p>Completely impact synergestic mindshare</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-7">
+            <div class="container flex">
+                <div class="flex-30">
+                    <h3>Request for call back</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. animi. ndsjrio riwji ewori ptyore weyru lorem kroerim kroeitk.</p>
+                </div>
+                <form action="" class="flex-60">
+                    <fieldset>
+                        <legend>
+                           <input type="text" name="username" placeholder="Name">
+                           <input type="phone" name="phone" placeholder="Mobile">
+                        </legend>
+                        <select name="serivces">
+                            <option value="services">Services</option>
+                            <option value="">Services-2</option>
+                            <option value="">Services-3</option>
+                           </select>
+                           <a href="#" class="btn">Send</a>
+                   </fieldset>
+                </form>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container flex">
+            <div class="flex-20">
+                <img src="media/logo2_footer.png" width="150" alt="logo">
+                <p>Lorem ipsum dolor sit amet conse, adipisicing elit. Id, ducimus.</p>
+                <nav>
+                    <ul class="ul">
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-pinterest"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class=" com-list flex-10">
+                <h5>Company</h5>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="cases.html">Cases</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Services</h5>
+                <ul>
+                    <li>Commercial Cleaning</li>
+                    <li>Office Cleaning</li>
+                    <li>FLoor Cleaning</li>
+                    <li>Building Cleaning</li>
+                    <li>Appartment Cleaning</li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Get iN Touch</h5>
+                <ul>
+                    <li>152-515-0565</li>
+                    <li>demonmail@gmail.com</li>
+                    <li>New Orleans, USA</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="container copy">
+            
+            <div>
+              <small>Copyright&copy;2020 All rights reserved | This tempelate is made with <i class="fa-regular fa-heart"></i> by <b>Colorib</b>  </small>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
