contact  page completed

--- a/services.html
+++ b/services.html
@@ -82,5 +82,176 @@
                 </div>
             </div>
     </header>
+    <main>
+        <section class="services-hero">
+            <div class="container">
+              <h1>Our Services</h1>
+            </div>
+        </section>
+        <section class="section-3 section3-about">
+            <div class="container">
+                <h3>Our Services</h3>
+                <div class="flex">
+                    <div class="flex-22 col">
+                        <img src="media/strategic-plan.png" alt="" width="30%">
+                        <h2>Strategic Planning</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                    <div class="flex-22 col">
+                        <img src="media/stock.png" alt="" width="30%">
+                        <h2>Trade & Stocks</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                    <div class="flex-22 col">
+                        <img src="media/assurance.png" alt="" width="30%">
+                        <h2>Audit & Assurance</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, veniam.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-btn">
+                    <a class="btn-s" href="#">More Services</a>
+                </div>
+            </div>
+        </section>
+        <section class="section-6">
+            <div class="container">
+                <h3>Our Recenet News</h3>
+                <div class="flex">
+                    <div class="flex-25">
+                        <div>
+                            <img src="media/rcent_1.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div  class="flex-25">
+                        <div >
+                            <img src="media/rcent_2.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex-25">
+                        <div>
+                            <img src="media/rcent_3.png" alt="" width="100%">
+                            <div class="business-h">
+                                <p class="busi">Business planing</p>
+                                <h2>Amazing Places To Visit in Summer</h2>
+                                <p>Nov 30 ,2020</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-7">
+            <div class="container flex">
+                <div class="flex-30">
+                    <h3>Request for call back</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. animi. ndsjrio riwji ewori ptyore weyru lorem kroerim kroeitk.</p>
+                </div>
+                <form action="" class="flex-60">
+                    <fieldset>
+                        <legend>
+                           <input type="text" name="username" placeholder="Name">
+                           <input type="phone" name="phone" placeholder="Mobile">
+                        </legend>
+                        <select name="serivces">
+                            <option value="services">Services</option>
+                            <option value="">Services-2</option>
+                            <option value="">Services-3</option>
+                           </select>
+                           <a href="#" class="btn">Send</a>
+                   </fieldset>
+                </form>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="container flex">
+                <div class="flex-20">
+                    <img src="media/logo2_footer.png" width="150" alt="logo">
+                    <p>Lorem ipsum dolor sit amet conse, adipisicing elit. Id, ducimus.</p>
+                    <nav>
+                        <ul class="ul">
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-facebook-f"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-x-twitter"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-linkedin-in"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa-brands fa-pinterest"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class=" com-list flex-10">
+                    <h5>Company</h5>
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="about.html">About Us</a>
+                        </li>
+                        <li>
+                            <a href="services.html">Services</a>
+                        </li>
+                        <li>
+                            <a href="cases.html">Cases</a>
+                        </li>
+                        <li>
+                            <a href="contact.html">Contact Us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="flex-10">
+                    <h5>Services</h5>
+                    <ul>
+                        <li>Commercial Cleaning</li>
+                        <li>Office Cleaning</li>
+                        <li>FLoor Cleaning</li>
+                        <li>Building Cleaning</li>
+                        <li>Appartment Cleaning</li>
+                    </ul>
+                </div>
+                <div class="flex-10">
+                    <h5>Get iN Touch</h5>
+                    <ul>
+                        <li>152-515-0565</li>
+                        <li>demonmail@gmail.com</li>
+                        <li>New Orleans, USA</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="container copy">
+                
+                <div>
+                  <small>Copyright&copy;2020 All rights reserved | This tempelate is made with <i class="fa-regular fa-heart"></i> by <b>Colorib</b>  </small>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
 </html>
