--- a/contact.html
+++ b/contact.html
@@ -82,5 +82,12 @@
                 </div>
             </div>
     </header>
+    <main>
+        <section>
+            <div class="container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2712.137680555766!2d76.35283397454086!3d32.20729901288498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b530e24726e0d%3A0x71ff0cae0784712d!2sAltCampus%20Services%20Private%20Limited!5e1!3m2!1sen!2sin!4v1704702685611!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
