--- a/contact.html
+++ b/contact.html
@@ -83,11 +83,169 @@
             </div>
     </header>
     <main>
+        <section class="contact-hero">
+            <div class="container">
+              <h1>Contact US</h1>
+            </div>
+        </section>
         <section>
             <div class="container">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2712.137680555766!2d76.35283397454086!3d32.20729901288498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b530e24726e0d%3A0x71ff0cae0784712d!2sAltCampus%20Services%20Private%20Limited!5e1!3m2!1sen!2sin!4v1704702685611!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2712.137680555766!2d76.35283397454086!3d32.20729901288498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b530e24726e0d%3A0x71ff0cae0784712d!2sAltCampus%20Services%20Private%20Limited!5e1!3m2!1sen!2sin!4v1704702685611!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+        </section>
+        <section class="form">
+            <h2>Get in Touch</h2>
+            <div class="container flex">
+                <div class="form-container flex-60">
+                    
+                    <form action="">
+                        <fieldset>
+                            <textarea class="textarea" name="message" id="" cols="30" rows="10" placeholder="Enter message"></textarea>
+                            <div class="input-flex name">
+                                <input type="name" placeholder="Enter your name">
+                                <input class="input-2" type="email" placeholder="Email">
+                            </div>
+                            <div>
+                                <input type="text" placeholder="Subject">
+                            </div>
+                        </fieldset>
+                    </form>
+                    <div>
+                        <a href="#">Send</a>
+                    </div>
+                </div>
+                <div class="address-container flex-20">
+                  <div class="flex address-1">
+                    <div>
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                    <div>
+                        <h3>Buttonwood, California</h3>
+                        <p>Rosmead, CA 91770</p>
+                    </div>
+                  </div>
+                  <div class="flex address-1">
+                    <div>
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
+                    <div>
+                        <h3>+1 253 565 2365</h3>
+                        <p>Mon to Fri 9am to 6pm</p>
+                    </div>
+                  </div>
+                  <div class="flex address-1">
+                    <div>
+                        <i class="fa-regular fa-envelope"></i>
+                    </div>
+                    <div>
+                        <h3>support@colorlib.com</h3>
+                        <p>Send us your query anytime!</p>
+                    </div>
+                  </div>
+                </div>
+            </div>
+        </section>
+        <section class="section-7">
+            <div class="container flex">
+                <div class="flex-30">
+                    <h3>Request for call back</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. animi. ndsjrio riwji ewori ptyore weyru lorem kroerim kroeitk.</p>
+                </div>
+                <form action="" class="flex-60">
+                    <fieldset>
+                        <legend>
+                           <input type="text" name="username" placeholder="Name">
+                           <input type="phone" name="phone" placeholder="Mobile">
+                        </legend>
+                        <select name="serivces">
+                            <option value="services">Services</option>
+                            <option value="">Services-2</option>
+                            <option value="">Services-3</option>
+                           </select>
+                           <a href="#" class="btn">Send</a>
+                   </fieldset>
+                </form>
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="container flex">
+            <div class="flex-20">
+                <img src="media/logo2_footer.png" width="150" alt="logo">
+                <p>Lorem ipsum dolor sit amet conse, adipisicing elit. Id, ducimus.</p>
+                <nav>
+                    <ul class="ul">
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-facebook-f"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="">
+                                <i class="fa-brands fa-pinterest"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class=" com-list flex-10">
+                <h5>Company</h5>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About Us</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                    <li>
+                        <a href="cases.html">Cases</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Services</h5>
+                <ul>
+                    <li>Commercial Cleaning</li>
+                    <li>Office Cleaning</li>
+                    <li>FLoor Cleaning</li>
+                    <li>Building Cleaning</li>
+                    <li>Appartment Cleaning</li>
+                </ul>
+            </div>
+            <div class="flex-10">
+                <h5>Get iN Touch</h5>
+                <ul>
+                    <li>152-515-0565</li>
+                    <li>demonmail@gmail.com</li>
+                    <li>New Orleans, USA</li>
+                </ul>
+            </div>
+        </div>
+        <hr>
+        <div class="container copy">
+            
+            <div>
+              <small>Copyright&copy;2020 All rights reserved | This tempelate is made with <i class="fa-regular fa-heart"></i> by <b>Colorib</b>  </small>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
